Use more realistic example for "using" syntax test

--- a/tests/syntax_test_cshtml.cshtml
+++ b/tests/syntax_test_cshtml.cshtml
@@ -1,10 +1,10 @@
 <!-- SYNTAX TEST "Packages/HTML (C#)/razor.sublime-syntax" -->
 <!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/views/razor?view=aspnetcore-2.1 -->
-@using Michael.Blyons.Example
+@using System.Collections.Generic
 <!-- <- punctuation.section.embedded.line - source.cs.embedded -->
-<!-- ^^^^^^^^^^^^^^^^^^^^^^^^ source.cs.embedded -->
+<!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ source.cs.embedded -->
 <!-- ^ keyword.other -->
-<!--                         ^ - source.cs.embedded -->
+<!--                             ^ - source.cs.embedded -->
 @model IEnumerable<SomeNamespace.SomeType>
 <!-- <- punctuation.section.embedded.line - source.cs.embedded -->
 <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ source.cs.embedded -->
