Big file shuffle

--- a/Razor/tests/syntax_test_cshtml.cshtml
+++ b/Razor/tests/syntax_test_cshtml.cshtml
@@ -1,4 +1,4 @@
-<!-- SYNTAX TEST "Packages/HTML (C#)/razor.sublime-syntax" -->
+<!-- SYNTAX TEST "Packages/HTML (C#)/Razor/Razor.x.sublime-syntax" -->
 <!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/views/razor?view=aspnetcore-2.1 -->
 @using System.Collections.Generic
 <!-- <- punctuation.section.embedded.line - source.cs.embedded -->
