--- a/Razor/tests/syntax_test_cshtml.cshtml
+++ b/Razor/tests/syntax_test_cshtml.cshtml
@@ -209,6 +209,7 @@ finally
 
     <script type="text/javascript">
         function find() {
+            // TODO: Fix embedded languages
             var val = $('@HtmlHelpers.Something').val();
         }
     </script>
